# beldex-flutter-wallet

./: .gitignore  Deployment.md  LICENSE  README.md  privacy-policy.md  pubspec.yaml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
assets/: changelog.yml  node_list.yml  sample_text.txt  testnet_node_list.yml
assets/faq/: faq_de.json  faq_en.json
assets/images/new-images/: sent_Apng.apng  walletgif_splash.json
assets/text/: Terms_of_Use.txt  terms_and_cond.txt
beldex_coin/: README.md  pubspec.yaml
beldex_coin/android/: CMakeLists.txt  build.gradle  settings.gradle
beldex_coin/android/jni/: beldex_jni.cpp
beldex_coin/android/src/main/: AndroidManifest.xml
beldex_coin/android/src/main/kotlin/io/beldex/coin/: BeldexCoinPlugin.kt
beldex_coin/ios/: .gitignore  beldex_coin.podspec
beldex_coin/ios/Classes/: BeldexCoinPlugin.h  BeldexCoinPlugin.m  BeldexWalletListener.h  (+2 more)
beldex_coin/lib/: account_list.dart  beldex_coin_structs.dart  stake.dart  subaddress_list.dart  transaction_history.dart  wallet.dart  wallet_manager.dart
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: .secrets.g.dart  devtools.dart  l10n.dart  main.dart  palette.dart  router.dart  routes.dart  themes.dart
lib/l10n/: app_de.arb  app_en.arb  app_fr.arb  intl_de.arb  intl_en.arb  intl_fr.arb
lib/src/: loading_page.dart  start_updating_price.dart
test/: widget_test.dart
tool/: .secrets-test.json  download-android-deps.sh  download-ios-deps.sh
(+333 files in other folders)
